--- a/TestGit_1/TestGit_1.vcxproj.filters
+++ b/TestGit_1/TestGit_1.vcxproj.filters
@@ -21,6 +21,9 @@
     <ClCompile Include="TestClass.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="KWclass.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="TestClass.h">
